[project]
name = "load-tester"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark-Amgad",email = "markamgad5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "load_tester", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load-tester = "load_tester.main:app"
